--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,12 @@
 			<groupId>jakarta.json</groupId>
 			<artifactId>jakarta.json-api</artifactId>
 			<version>2.1.1</version>
-		</dependency>
+		</dependency><!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.7</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
